Implement signal deconvolution and image convolution/deconvolution

--- a/doc/locale/fr/LC_MESSAGES/changelog.po
+++ b/doc/locale/fr/LC_MESSAGES/changelog.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Sigima \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-09-08 20:41+0200\n"
+"POT-Creation-Date: 2025-09-10 09:48+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: fr\n"
@@ -27,6 +27,12 @@ msgstr "La bibliothèque `sigima` fait partie de la plateforme open-source DataL
 
 msgid "sigima 1.0.0"
 msgstr "sigima 1.0.0"
+
+msgid "New image operation:"
+msgstr "Nouvelle opération d'image :"
+
+msgid "Convolution."
+msgstr "Convolution."
 
 msgid "✨ Core architecture update: scalar result types"
 msgstr "✨ Mise à jour de l'architecture de base: types de résultats scalaires"
@@ -180,6 +186,9 @@ msgstr "Du bruit gaussien, de Poisson ou uniforme peut être ajouté."
 
 msgid "New utility functions to generate file basenames."
 msgstr "Nouvelles fonctions utilitaires pour générer des noms de fichiers."
+
+msgid "Deconvolution in the frequency domain."
+msgstr "Déconvolution dans le domaine fréquentiel."
 
 msgid "New ROI features:"
 msgstr "Nouvelles fonctionnalités de ROI:"
