Update French translation for pulse features to improve clarity

--- a/sigima/locale/fr/LC_MESSAGES/sigima.po
+++ b/sigima/locale/fr/LC_MESSAGES/sigima.po
@@ -1213,7 +1213,7 @@ msgid "Fraction for rise end"
 msgstr "Fraction pour la fin de la montée"
 
 msgid "Pulse features"
-msgstr "Caractéristiques de l'impulsion"
+msgstr "Caractéristiques"
 
 msgid "Zero-crossing"
 msgstr "Passage par zéro"
